--- a/example-app/capacitor.config.json
+++ b/example-app/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "com.example.plugin",
-  "appName": "example-app",
+  "appId": "app.capgo.gtm",
+  "appName": "GTM Example",
   "webDir": "dist",
   "plugins": {
     "SplashScreen": {
