--- a/example-app/android/capacitor.settings.gradle
+++ b/example-app/android/capacitor.settings.gradle
@@ -2,5 +2,5 @@
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
 
-include ':capgo-capactior-gtm'
-project(':capgo-capactior-gtm').projectDir = new File('../../android')
+include ':capgo-capacitor-gtm'
+project(':capgo-capacitor-gtm').projectDir = new File('../../android')
