--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@capgo/capactior-gtm",
+  "name": "@capgo/capacitor-gtm",
   "version": "7.1.2",
   "description": "Google Tag manager plugin for Capacitor",
   "main": "dist/plugin.cjs.js",
