--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ios/Sources",
     "ios/Tests",
     "Package.swift",
-    "CapgoCapactiorGtm.podspec"
+    "CapgoCapacitorGtm.podspec"
   ],
   "author": "martin Donadieu",
   "license": "MIT",
@@ -33,7 +33,7 @@
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
-    "verify:ios": "xcodebuild -scheme CapgoCapactiorGtm -destination generic/platform=iOS",
+    "verify:ios": "xcodebuild -scheme CapgoCapacitorGtm -destination generic/platform=iOS",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
